# data-eng-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_OLD.md  DISTRIBUTED_GUIDANCE_STRATEGY.md  README.md  TESTING_STRATEGY.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements-test.txt
data_eng_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE_SEPARATION.md  DCSM_INTEGRATION.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  TEMPLATE_EVOLUTION_SUMMARY.md  cookiecutter_directory_structure.md
hooks/: post_gen_project.py
scripts/: fast-reset.sh  teardown-test-environment.sh  validate-dcsm-integration.py
tests/: conftest.py  conftest_cleanup.py
tests/integration/: test_airflow_authentication.py  test_airflow_deployment.py  test_dcsm_custom_build_integration.py  test_devcontainer_startup_validation.py  test_docs_validation.py  test_fast_devcontainer_startup.py  test_full_cycle_devcontainer.py  test_hydra_cutover.py  test_postgres_integration.py  (+1 more)
{{cookiecutter.repo_slug}}/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.airflow  Dockerfile.airflow.fast-test  Dockerfile.data-processing  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_slug}}/.devcontainer/: README.md  airflow.env  bootstrap-dev.sh  clean.sh  compose.test-fast.yaml  compose.yaml  devcontainer.json  post-start.sh  services.yaml  setup-hydra-env.sh
{{cookiecutter.repo_slug}}/.github/workflows/: deploy.yml
{{cookiecutter.repo_slug}}/airflow/: requirements.txt
{{cookiecutter.repo_slug}}/airflow/plugins/: .gitkeep
{{cookiecutter.repo_slug}}/conf/: config.yaml
{{cookiecutter.repo_slug}}/conf/compute/: local.yaml
{{cookiecutter.repo_slug}}/conf/database/: postgres_cloud.yaml  postgres_local.yaml
{{cookiecutter.repo_slug}}/conf/deployment/: dev.yaml  local.yaml  prod.yaml
{{cookiecutter.repo_slug}}/conf/environment/: dev.yaml  prod.yaml
{{cookiecutter.repo_slug}}/conf/orchestration/: airflow_local.yaml
{{cookiecutter.repo_slug}}/conf/transformations/: dbt_dev.yaml
{{cookiecutter.repo_slug}}/dags/: CLAUDE.md  example_dag.py  example_isolated_data_processing.py  example_modern_airflow.py
{{cookiecutter.repo_slug}}/dbt/: CLAUDE.md  dbt_project.yml  profiles-example.yml
{{cookiecutter.repo_slug}}/dbt/models/bronze/: bronze_events.sql
{{cookiecutter.repo_slug}}/dbt/models/gold/: example_gold.sql
{{cookiecutter.repo_slug}}/dbt/models/silver/: example_silver.sql
{{cookiecutter.repo_slug}}/docs/: QUICK_REFERENCE.md  directory_structure.md  faq.md  getting-started.md  index.md
{{cookiecutter.repo_slug}}/docs/adr/: 0001-hydra-configuration.md
{{cookiecutter.repo_slug}}/docs/configuration/: README.md
{{cookiecutter.repo_slug}}/docs/deployment/: README.md
{{cookiecutter.repo_slug}}/docs/operations/: README.md
{{cookiecutter.repo_slug}}/docs/pipelines/: README.md
{{cookiecutter.repo_slug}}/scripts/: CLAUDE.md  airflow-cli.sh  deploy.py  migrate_config.py  psql.sh  run_pipeline.py  setup-development.sh  smart-build.sh  uninstall-dcm.sh  validate-dcm-cleanup.sh
{{cookiecutter.repo_slug}}/src/{{cookiecutter.repo_slug.replace('-', '_')}}/config/: __init__.py  settings.py
{{cookiecutter.repo_slug}}/src/{{cookiecutter.repo_slug}}/config/: __init__.py  settings.py
{{cookiecutter.repo_slug}}/tests/: test_config.py  test_dag_loads.py
{{cookiecutter.repo_slug}}/transforms/: CLAUDE.md  README.md  models.py  requirements.txt
(+3 files in other folders)
